# mgnet

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml
docs/: logs.txt
mgnet/: dataset.py  mgnet.py  utils.py
src/mgnet/: __init__.py  mgnet.py  model.py
tests/: __main__.py  test.ipynb  test_inference.py  utils.py
