[project]
name = "mgnet"
version = "0.1.0"
description = "Multigrid Neural Network implemented in PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
authors = [
    { name = 'AKJ7', email='akj123429@gmail.com' }
]

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true

